# src/utils/openapi/models/index.ts
@@ -1,5 +1,8 @@
 /* tslint:disable */
 /* eslint-disable */
 export * from './HTTPValidationError';
+export * from './History';
+export * from './HistoryAdd';
 export * from './LocationInner';
+export * from './User';
 export * from './ValidationError';
